--- a/app/src/main/res/layout/potrait_layout.xml
+++ b/app/src/main/res/layout/potrait_layout.xml
@@ -9,6 +9,9 @@
 
     <TextView
         android:id="@+id/text_result"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:textSize="44sp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@android:color/background_light"
