--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#ec407a</color>
     <color name="colorPrimaryDark">#ec407a</color>
     <color name="colorAccent">#409cff</color>
+    <color name="Transparent">#00FFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
