--- a/app/src/main/res/layout/autumn.xml
+++ b/app/src/main/res/layout/autumn.xml
@@ -8,11 +8,13 @@
 
     <TextView
         android:id="@+id/text_result"
-        android:textSize="44sp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@android:color/background_light"
-        android:layout_weight="2"/>
+        android:layout_weight="2"
+        android:paddingRight="15dp"
+        android:textSize="60sp"
+        android:gravity="center|end"
+        android:background="@android:color/background_light" />
 
     <LinearLayout
         android:orientation="horizontal"
