--- a/app/src/main/res/layout/galaxy.xml
+++ b/app/src/main/res/layout/galaxy.xml
@@ -7,13 +7,13 @@
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/text_result"
-        android:paddingLeft="4dp"
-        android:paddingRight="4dp"
-        android:textSize="44sp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@android:color/background_light"
-        android:layout_weight="2"/>
+        android:layout_weight="2"
+        android:paddingRight="15dp"
+        android:textSize="60sp"
+        android:gravity="center|end"
+        android:background="@android:color/background_light" />
     <LinearLayout
         android:orientation="horizontal"
         android:id="@+id/lower_container"
